# Resubmission-Copilot

./: .buildinfo  .dockerignore  .gitignore  =4.2.0  Dockerfile  README.md  docker-compose.yaml  exp_policies.py  flask_app.py  genindex.html  index.html  insert.py  last_diagnosis.md  last_diagnosis.py  main.py  main_streamlit.py  ncci_schema.json  objects.inv  py-modindex.html  pyproject.toml  run_flask_app.sh  schema.json  search.html  searchindex.js  setup.cfg  test.py  wsgi.py
.github/workflows/: test.yml
Data/: cn.html
SQL/: get_visits.sql  last_diagnosis.sql  resubmission.sql
docs/: conf.py  index.rst
docs/source/: resubmission.rst
jsons/Bupa/: llama-extract-00b8778a-512a-40ae-979d-a1e60b9612b4-StatementReport_20Nov25_103842.json  llama-extract-022e8674-e9c3-48c0-9499-289ef7a2c857-StatementReport_20Nov25_103225.json  llama-extract-041cfa01-22da-40b5-bf58-a0972df73aab-StatementReport_20Nov25_102924.json  llama-extract-071f9fa2-de05-49ca-994a-c7ec792620b5-StatementReport_20Nov25_103810.json  llama-extract-0b6d21cc-caf0-4c11-b094-1f27508a1bd6-StatementReport_20Nov25_105602.json  llama-extract-0b73eda4-1649-48ac-9b87-248f96539b88-StatementReport_20Nov25_103414.json  llama-extract-0df9d3b9-eff5-4d70-a55e-dc599dc63758-StatementReport_20Nov25_102948.json  llama-extract-132c6cb5-c988-4a4b-9dbe-d32021000723-StatementReport_20Nov25_102923.json  llama-extract-136f023b-70c4-4cdb-9c4d-9ebd6e9c0338-StatementReport_20Nov25_102959.json  llama-extract-1928b1e9-dd1c-42d8-9994-d1b12c62a222-StatementReport_20Nov25_103437.json  llama-extract-19b02812-15ac-448a-9bc2-fb6403720483-StatementReport_20Nov25_105021.json  llama-extract-1ce70541-524b-422a-bb3d-cf23633ff67e-StatementReport_20Nov25_103613.json  llama-extract-1fec9c38-521b-46e5-8991-d2be7bee7928-StatementReport_20Nov25_103737.json  llama-extract-2365dc24-3267-417a-87b9-df1c4e492999-StatementReport_20Nov25_102847.json  llama-extract-24d0a245-6f20-4ba6-8eca-9382c5af4c3e-StatementReport_20Nov25_103507.json  llama-extract-26cb0cea-cf55-4347-9f81-4bf8d3314f4d-StatementReport_20Nov25_103036.json  llama-extract-2a0f3a56-4fe8-4f32-bc54-59252d7f7a1c-StatementReport_20Nov25_105551.json  llama-extract-2a38367d-f546-418c-94a5-790b3a5b819f-StatementReport_20Nov25_103648.json  llama-extract-2ac948b4-8ed3-49b2-b72e-b52f8497137e-StatementReport_20Nov25_105042.json  llama-extract-2cf63bea-a1fe-4769-9032-dadd038fb3df-StatementReport_20Nov25_102833.json  llama-extract-2f0c7d3e-19b8-483d-a7fa-f921ad43e5ea-StatementReport_20Nov25_102645.json  llama-extract-31ea4153-5199-4294-b0b6-0cecc993f933-StatementReport_20Nov25_102756.json  llama-extract-3441cb27-c637-412a-a94c-05344e1e5e58-StatementReport_20Nov25_103825.json  llama-extract-3795fb0f-1969-49b2-be9d-59304c80a944-StatementReport_20Nov25_105416.json  llama-extract-3b234dcb-61dd-412c-b89a-31992b05b61f-StatementReport_20Nov25_103301.json  llama-extract-3bc0710e-4060-4489-9549-0f32e38129ef-StatementReport_20Nov25_103025.json  llama-extract-3bf51cac-e98f-4726-879b-75c24afbf131-StatementReport_20Nov25_103423.json  llama-extract-43dd02c4-f667-41cd-8590-bc783540c16b-StatementReport_20Nov25_103333.json  llama-extract-46e38742-354f-47df-8fed-c4e6efa60c63-StatementReport_20Nov25_104828.json  llama-extract-47a9197a-5d43-4653-9233-71b2c23b9490-StatementReport_20Nov25_103520.json  llama-extract-4ac7099b-8c9c-4796-9d93-243b153286c3-StatementReport_20Nov25_104841.json  llama-extract-4bd92faf-8286-45f6-99da-9d31c8bded70-StatementReport_20Nov25_103452.json  llama-extract-5089c15d-a9bb-4afa-a62e-070306f45b80-StatementReport_20Nov25_103837.json  llama-extract-527a975b-26db-44b2-9a16-68d817c59bae-StatementReport_20Nov25_105651.json  llama-extract-5465ccf2-92f1-404d-bfa5-a272d0cac27b-StatementReport_20Nov25_105138.json  llama-extract-55232204-7014-4be8-aef8-4b0d780838b9-StatementReport_20Nov25_103658.json  llama-extract-5899352a-99fb-4e44-b85e-d1637fce86ed-StatementReport_20Nov25_105329.json  llama-extract-5c2a15be-69d2-49aa-83ee-dab4edd04330-StatementReport_20Nov25_105101.json  llama-extract-5d7e3392-0c03-43ec-a4cd-4eeecab95e7e-StatementReport_20Nov25_105407.json  llama-extract-5f3b2eed-9536-401d-8f8c-0023cbffc671-StatementReport_20Nov25_105447.json  (+67 more)
jsons/Bupa/New/: llama-extract-0b463203-e600-4bc2-a01e-972e53b54297-513508002-IHP - Tahaluf Events Limited-6-11-2026.json  llama-extract-1a5f9b43-addf-485e-8976-1695896da803-475232002- FIRST FIX CO -22-11-2026.json  llama-extract-1d11b8ac-2d01-43b3-ae04-8ee7c759a6aa-476608003-Arabian Gulf Shipping-31-12-2026.json  llama-extract-21b57d3d-2487-450d-b6a9-29f1372a0498-508238003 -TASAMA Business Services Company-31-12-2026.json  llama-extract-2fbe6bf2-3ffd-4ba6-a470-9c71e28d6f5e-563249007 Bupa Direct - Awaser International Trading Company-16-1-2027.json  llama-extract-3286eeca-cd63-41c5-b9d6-ccff2e291b22-501471001-SAUDI NATIONAL BANK SNB-1-1-2027.json  llama-extract-3806f46f-40be-44ce-947e-b50957a8850b-514222001-Saudi Central Bank (SAMA)-1-12-2026.json  llama-extract-49c09191-bc28-484a-a144-cbaaf0e5c695-514312001 -Al Badr Optical-1-12-2026.json  llama-extract-51c8b559-3cde-499a-a7fd-a25449c7c7d4-501471003- Saudi National Bank SNB-31-12-2026.json  llama-extract-53c76aa3-9b20-4c96-a283-bccfa76cd450-501533015- HAFIL TRANSPORT CO - 1-1-2027.json  llama-extract-56352378-0d40-43c7-a3cd-bc599f58e837-508167008-ORIENT PROVISION AND TRADING CO LTD-31-12-2026.json  llama-extract-5c6c0aa8-aa12-4d27-994a-3e9b919745e4-520137001-BUPA Direct - Basmah Yahya Ahmed Alshehri Est.json  llama-extract-6832f02c-0c32-46b4-a898-c26d86e6de59-519802001-Saudi Motorsport Co.json  llama-extract-70b1fbf6-6a1d-4b76-af4e-c1f9d39fd10c-488797001-Saudi Technology Systems Co-11-1-2027.json  llama-extract-73ab02a5-e040-4e4d-91ed-3f4cd5d72872-357880307 -BALUBAID GROUP HOLDING COMPANY-31-12-2026.json  (+15 more)
resubmission/: pyvenv.cfg
source/: resubmission.html
src/resubmission/: app.py  chatbot.py  config_handler.py  const.py  extraction.py  models.py  prompt.py  utils.py
static/: style.css
templates/: chat.html  error.html  index.html  layout.html
(+15 files in other folders)
