[build-system]
requires= ["setuptools>=42.0", "wheel"]
build-backend= "setuptools.build_meta"

[project]
name = "Resubmission-Copilot"
version = "0.0.1"
description = "Automating Claims Resubmission Process"
readme = "README.md"
authors = [
    {name = "AI Team", email = "nadeensokily@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["machine learning", "python", "AI", "data science", "LLM"]
requires-python = ">=3.10"

dependencies = [
    "pandas==2.3.0",
    "openpyxl==3.1.5",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.1.0,<2.0.0",
    "langchain-fireworks==1.1.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "llama-cloud-services==0.6.65",
    "mongoengine==0.29.1",
    "Flask==3.1.2",
    "pyodbc==5.3.0",
    "gunicorn==23.0.0",
    "SQLAlchemy==2.0.45",
]


[project.optional-dependencies]
testing = [
    "pytest==8.3.4",
    "Sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints==2.5.0",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "flake8==7.1.1",
    "tox==4.23.2",
    "black==24.10.0",
    "pytest-mock==3.14.0",
    "pytest-watcher==0.4.3",
]

[tool.pytest.ini_options]
addopts = "--cov=resubmission"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 88  
target-version = ['py310', 'py312']  
skip-string-normalization = false  
skip-magic-trailing-comma = false  
include = '\.pyi?$'  
exclude = '''
/(
    \.eggs         
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''