[metadata]
name = Resubmission-Copilot
version = 0.0.1
description = Automating Claims Resubmission Process
long_description = file: README.md
long_description_content_type = text/markdown
author = AI Team
author_email = nadeensokily@gmail.com
url = https://github.com/Andalusia-Data-Science-Team/Resubmission-Copilot.git
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords = machine learning, python

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

install_requires=
    pandas==2.3.0
    openpyxl==3.1.5
    langchain>=0.3.0
    langchain-community>=0.3.0
    langchain-core>=1.1.0,<2.0.0
    langchain-fireworks==1.1.0
    langgraph==1.0.4
    langgraph-checkpoint==3.0.1
    psycopg2-binary==2.9.10
    python-dotenv==1.0.1
    llama-cloud-services==0.6.65
    mongoengine==0.29.1
    Flask==3.1.2
    pyodbc==5.3.0
    gunicorn==23.0.0
    SQLAlchemy==2.0.45


[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
testing =
    pytest==8.3.4
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-autodoc-typehints==2.5.0
    pytest-cov==6.0.0
    mypy==1.13.0
    flake8==7.1.1
    tox==4.23.2
    black==24.10.0
    pytest-mock==3.14.0
    pytest-watcher==0.4.3

[options.package_data]
resubmission = py.typed


[flake8]
max-line-length = 90
extend-ignore = E501, E203

[tox:tox]
envlist = py310,py312